# rustlog

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix
examples/: basic.rs  local_logger.rs
no_std_smoke/: Cargo.toml
no_std_smoke/src/: lib.rs
src/: lib.rs  local.rs
tests/: banner.rs  banner_newline.rs  color_env.rs  color_env_invalid.rs  color_modes.rs  concurrency.rs  env.rs  env_bools.rs  env_levels_all.rs  env_more.rs  file_line.rs  groups_and_scope.rs  groups_toggle.rs  helpers.rs  levels_color_all.rs  local_logger.rs  local_scope_time_block.rs  log_levels.rs  parse_and_levels.rs  scope_time_raii.rs  set_file_err.rs  stdout_auto.rs  stdout_auto_color.rs  target_file.rs  target_idempotent.rs  target_stderr.rs  target_stdout.rs  thread_id.rs  timestamps.rs  writer_no_sink.rs
